# chr

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  debug_chr.sh  example-chr.toml  go.mod  go.sum  install.sh  main.go
.github/workflows/: release.yml
cmd/: cli.go  cli_test.go  root.go  root_test.go
internal/config/: config.go  config_test.go
internal/git/: git.go  git_test.go
internal/picker/: picker.go  picker_test.go
src/: main.rs
