[package]
name = "chr"
version = "0.0.2"
edition = "2021"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
dialoguer = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
anyhow = "1.0"

[profile.release]
opt-level = "z"     
lto = true          
codegen-units = 1   
strip = true        
